Fixed a problem where the pageLayout loses its width when all criterion panels are collapsed

--- a/designer/src/main/webapp/VAADIN/themes/designertheme/designertheme.scss
+++ b/designer/src/main/webapp/VAADIN/themes/designertheme/designertheme.scss
@@ -372,4 +372,8 @@
     text-align: center;
     font-size: 26px;
   }
+
+  .v-verticallayout-pageLayout {
+    width: 100%;
+  }
 }
